feat: remove the logic of node minTokensToStake
