# internal/service/hub/handler/nta/node_register.go
@@ -29,7 +29,6 @@ import (
 	"github.com/rss3-network/node/schema/worker"
 	"github.com/rss3-network/protocol-go/schema/network"
 	"github.com/samber/lo"
-	"github.com/shopspring/decimal"
 	"go.uber.org/zap"
 )
 
@@ -171,13 +170,6 @@ func (n *NTA) register(ctx context.Context, request *nta.RegisterNodeRequest, re
 	if err != nil {
 		return fmt.Errorf("update node status: %w", err)
 	}
-
-	minTokensToStake, err := n.stakingContract.MinTokensToStake(&bind.CallOpts{}, request.Address)
-	if err != nil {
-		return fmt.Errorf("get min token to stake from chain: %w", err)
-	}
-
-	node.MinTokensToStake = decimal.NewFromBigInt(minTokensToStake, 0)
 
 	node.Location, err = n.geoLite2.LookupNodeLocation(ctx, requestIP)
 	if err != nil {
